--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "src", 
+    "paths": {
+      "~/*": ["*"], 
+      "~scss/*": ["./scss/*"],
+      "~components/*": ["./components/*"]
+
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
