implemented hooks for photo compression

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@jsquash/avif": "^2.0.0",
+    "@jsquash/jpeg": "^1.4.0",
+    "@jsquash/jxl": "^1.1.0",
+    "@jsquash/png": "^3.0.1",
+    "@jsquash/webp": "^1.4.0",
     "@mui/icons-material": "^6.4.1",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
